crates/ruff_linter/src/rules/flake8_no_pep420/snapshots/ruff_linter__rules__flake8_no_pep420__tests__tests_dir_stable_tests_integration_example_py.snap
---
source: crates/ruff_linter/src/rules/flake8_no_pep420/mod.rs
---
INP001 File `./resources/test/fixtures/flake8_no_pep420/test_pass_tests_dir/tests/integration/example.py` is part of an implicit namespace package. Add an `__init__.py`.
--> example.py:1:1
